plugins {
    id 'net.fabricmc.fabric-loom' version "$loom_version"
    id 'maven-publish'
    id 'idea'
}

static def getCheckedOutGitCommitHash(Project mcefParent) {
    // Works both standalone and when MCEF itself is a nested submodule/worktree.
    if (!mcefParent.file('java-cef/.git').exists()) return ""
    return mcefParent.providers.exec {
        workingDir mcefParent.file('java-cef')
        commandLine 'git', 'rev-parse', 'HEAD'
    }.standardOutput.asText.get().trim()
}

final jcefCommitFile = layout.buildDirectory.file "jcef.commit"

tasks.register('cloneJcef', Exec) {
    commandLine 'git', 'submodule', 'update', '--init', '--recursive', 'java-cef'
}

tasks.register('generateJcefCommitFile') {
    // The commit is read from the submodule's HEAD/ref, so declare it as an
    // input to invalidate the generated resource when the submodule changes.
    inputs.property 'javaCefCommit', getCheckedOutGitCommitHash(project)
    outputs.file jcefCommitFile
    doLast {
        def commitHash = getCheckedOutGitCommitHash(project)
        if (!commitHash.isEmpty()) {
            final output = jcefCommitFile.get().asFile
            output.parentFile.mkdirs()
            output.text = commitHash
        } else {
            throw new GradleException("Unable to determine JCEF commit hash.")
        }
    }
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    mavenCentral()
    mavenLocal()
    maven { url = 'https://maven.fabricmc.net/' }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    api "net.fabricmc:fabric-loader:${project.loader_version}"

    implementation "com.squareup.okhttp3:okhttp:4.12.0"
    implementation "org.lwjgl:lwjgl-egl:3.4.3"

    def junitVersion = "6.1.2"
    testImplementation "org.junit.jupiter:junit-jupiter:$junitVersion"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher:$junitVersion"
}

sourceSets {
    // JCEF is part of MCEF's public API. Include it in the main classes variant as well
    // as the jar so Gradle composite-build consumers can resolve the org.cef types.
    main {
        java {
            srcDir "java-cef/java"
            exclude "**/tests/**"
        }
    }

}

processResources {
    filesMatching('fabric.mod.json') {
        expand 'mod_id': mod_id,
                'mod_name': mod_name,
                'mod_vendor': mod_vendor,
                'mod_version': mod_version,
                'minecraft_version': mod_mc_version,
                'loader_version': loader_version
    }

    inputs.property "version", project.version

    dependsOn generateJcefCommitFile
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes(['Specification-Title'     : archives_base_name,
                    'Specification-Vendor'    : group,
                    'Specification-Version'   : "1",
                    'Implementation-Title'    : archives_base_name,
                    'Implementation-Version'  : mod_version,
                    'Implementation-Vendor'   : group,
                    'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                    'java-cef-commit'         : getCheckedOutGitCommitHash(project)
        ])
    }
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}"}
    }
    from jcefCommitFile
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

idea {
    module {
        excludeDirs += file("java-cef/java/tests")
        inheritOutputDirs true
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }

}

group = 'net.ccbluex'
